// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GlobalNavbar > code search only license 1`] = `
<DocumentFragment>
  <nav
    aria-label="Main"
    class="navbar"
  >
    <h1
      class="h1 logo"
    >
      <a
        class="anchorLink d-flex align-items-center"
        href="/search"
      >
        BrandLogo
      </a>
    </h1>
    <hr
      aria-hidden="true"
      class="divider"
    />
    <div
      class="menu list"
    >
      <ul
        class="list"
      >
        <li
          class="item wrapper"
        >
          <div
            class="link d-flex align-items-center p-0"
            data-test-active="false"
            data-test-id="/search"
          >
            <button
              aria-controls=""
              aria-haspopup="true"
              aria-label="Show search menu"
              class="btn itemFocusable button"
              data-reach-menu-button=""
              id="menu-button-test-id"
              type="button"
            >
              <span
                class="itemFocusableContent"
              >
                <svg
                  aria-hidden="true"
                  class="mdi-icon mdi-icon iconInline icon"
                  fill="currentColor"
                  height="24"
                  role="img"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z"
                  />
                </svg>
                <span
                  class="text iconIncluded"
                >
                  Code Search
                </span>
                <svg
                  aria-hidden="true"
                  class="mdi-icon iconInline icon"
                  fill="currentColor"
                  height="24"
                  role="img"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                  />
                </svg>
              </span>
            </button>
          </div>
        </li>
      </ul>
    </div>
    <ul
      class="actions"
    >
      <li
        class="action"
      >
        <div>
          <a
            class="anchorLink btn btnSecondary btnOutline btnSm mr-1"
            href="/sign-in?returnTo=/"
          >
            Sign in
          </a>
        </div>
      </li>
    </ul>
  </nav>
  <div
    class="searchNavBar"
  >
    SearchNavbarItem
  </div>
</DocumentFragment>
`;

exports[`GlobalNavbar > cody only license 1`] = `
<DocumentFragment>
  <nav
    aria-label="Main"
    class="navbar"
  >
    <h1
      class="h1 logo"
    >
      <a
        class="anchorLink d-flex align-items-center"
        href="/cody"
      >
        BrandLogo
      </a>
    </h1>
    <hr
      aria-hidden="true"
      class="divider"
    />
    <div
      class="menu list"
    >
      <ul
        class="list"
      >
        <li
          class="item wrapper"
        >
          <div
            class="link active d-flex align-items-center p-0"
            data-test-active="true"
            data-test-id="/cody"
          >
            <button
              aria-controls=""
              aria-haspopup="true"
              aria-label="Show cody menu"
              class="btn itemFocusable button"
              data-reach-menu-button=""
              id="menu-button-test-id"
              type="button"
            >
              <span
                class="itemFocusableContent"
              >
                <svg
                  fill="none"
                  height="20"
                  viewBox="0 0 20 20"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M13.9088 4C14.756 4 15.4429 4.69836 15.4429 5.55983V8.33286C15.4429 9.19433 14.756 9.89269 13.9088 9.89269C13.0615 9.89269 12.3747 9.19433 12.3747 8.33286V5.55983C12.3747 4.69836 13.0615 4 13.9088 4Z"
                    fill="#a6b6d9"
                  />
                  <path
                    d="M4.19287 7.63942C4.19287 6.77795 4.87971 6.07959 5.72696 6.07959H8.45423C9.30148 6.07959 9.98832 6.77795 9.98832 7.63942C9.98832 8.50089 9.30148 9.19925 8.45423 9.19925H5.72696C4.87971 9.19925 4.19287 8.50089 4.19287 7.63942Z"
                    fill="#a6b6d9"
                  />
                  <path
                    d="M17.5756 12.1801C18.1216 12.7075 18.1437 13.5851 17.625 14.1403L17.1423 14.6569C13.3654 18.6994 6.99777 18.5987 3.34628 14.4387C2.84481 13.8674 2.89377 12.9909 3.45565 12.481C4.01752 11.9711 4.87954 12.0209 5.38102 12.5922C7.97062 15.5424 12.4865 15.6139 15.1651 12.747L15.6477 12.2304C16.1664 11.6752 17.0296 11.6527 17.5756 12.1801Z"
                    fill="#a6b6d9"
                  />
                </svg>
                <span
                  class="text iconIncluded"
                >
                  Cody
                </span>
                <svg
                  aria-hidden="true"
                  class="mdi-icon iconInline icon"
                  fill="currentColor"
                  height="24"
                  role="img"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                  />
                </svg>
              </span>
            </button>
          </div>
        </li>
        <li
          class="item"
        >
          <a
            class="link"
            href="/search"
          >
            <span
              class="linkContent"
            >
              <svg
                aria-hidden="true"
                class="mdi-icon mdi-icon iconInline icon"
                fill="currentColor"
                height="24"
                role="img"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z"
                />
              </svg>
              <span
                class="text iconIncluded"
              >
                Code Search
              </span>
            </span>
          </a>
        </li>
      </ul>
    </div>
    <ul
      class="actions"
    >
      <li
        class="action"
      >
        <div>
          <a
            class="anchorLink btn btnSecondary btnOutline btnSm mr-1"
            href="/sign-in?returnTo=/"
          >
            Sign in
          </a>
        </div>
      </li>
    </ul>
  </nav>
  <div
    class="searchNavBar"
  >
    SearchNavbarItem
  </div>
</DocumentFragment>
`;

exports[`GlobalNavbar > default 1`] = `
<DocumentFragment>
  <nav
    aria-label="Main"
    class="navbar"
  >
    <h1
      class="h1 logo"
    >
      <a
        class="anchorLink d-flex align-items-center"
        href="/search"
      >
        BrandLogo
      </a>
    </h1>
    <hr
      aria-hidden="true"
      class="divider"
    />
    <div
      class="menu list"
    >
      <ul
        class="list"
      >
        <li
          class="item wrapper"
        >
          <div
            class="link d-flex align-items-center p-0"
            data-test-active="false"
            data-test-id="/search"
          >
            <button
              aria-controls=""
              aria-haspopup="true"
              aria-label="Show search menu"
              class="btn itemFocusable button"
              data-reach-menu-button=""
              id="menu-button-test-id"
              type="button"
            >
              <span
                class="itemFocusableContent"
              >
                <svg
                  aria-hidden="true"
                  class="mdi-icon mdi-icon iconInline icon"
                  fill="currentColor"
                  height="24"
                  role="img"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z"
                  />
                </svg>
                <span
                  class="text iconIncluded"
                >
                  Code Search
                </span>
                <svg
                  aria-hidden="true"
                  class="mdi-icon iconInline icon"
                  fill="currentColor"
                  height="24"
                  role="img"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                  />
                </svg>
              </span>
            </button>
          </div>
        </li>
        <li
          class="item wrapper"
        >
          <div
            class="link active d-flex align-items-center p-0"
            data-test-active="true"
            data-test-id="/cody"
          >
            <button
              aria-controls=""
              aria-haspopup="true"
              aria-label="Show cody menu"
              class="btn itemFocusable button"
              data-reach-menu-button=""
              id="menu-button-test-id"
              type="button"
            >
              <span
                class="itemFocusableContent"
              >
                <svg
                  fill="none"
                  height="20"
                  viewBox="0 0 20 20"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M13.9088 4C14.756 4 15.4429 4.69836 15.4429 5.55983V8.33286C15.4429 9.19433 14.756 9.89269 13.9088 9.89269C13.0615 9.89269 12.3747 9.19433 12.3747 8.33286V5.55983C12.3747 4.69836 13.0615 4 13.9088 4Z"
                    fill="#a6b6d9"
                  />
                  <path
                    d="M4.19287 7.63942C4.19287 6.77795 4.87971 6.07959 5.72696 6.07959H8.45423C9.30148 6.07959 9.98832 6.77795 9.98832 7.63942C9.98832 8.50089 9.30148 9.19925 8.45423 9.19925H5.72696C4.87971 9.19925 4.19287 8.50089 4.19287 7.63942Z"
                    fill="#a6b6d9"
                  />
                  <path
                    d="M17.5756 12.1801C18.1216 12.7075 18.1437 13.5851 17.625 14.1403L17.1423 14.6569C13.3654 18.6994 6.99777 18.5987 3.34628 14.4387C2.84481 13.8674 2.89377 12.9909 3.45565 12.481C4.01752 11.9711 4.87954 12.0209 5.38102 12.5922C7.97062 15.5424 12.4865 15.6139 15.1651 12.747L15.6477 12.2304C16.1664 11.6752 17.0296 11.6527 17.5756 12.1801Z"
                    fill="#a6b6d9"
                  />
                </svg>
                <span
                  class="text iconIncluded"
                >
                  Cody
                </span>
                <svg
                  aria-hidden="true"
                  class="mdi-icon iconInline icon"
                  fill="currentColor"
                  height="24"
                  role="img"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                  />
                </svg>
              </span>
            </button>
          </div>
        </li>
      </ul>
    </div>
    <ul
      class="actions"
    >
      <li
        class="action"
      >
        <div>
          <a
            class="anchorLink btn btnSecondary btnOutline btnSm mr-1"
            href="/sign-in?returnTo=/"
          >
            Sign in
          </a>
        </div>
      </li>
    </ul>
  </nav>
  <div
    class="searchNavBar"
  >
    SearchNavbarItem
  </div>
</DocumentFragment>
`;
